<resources>
    <string name="app_name">FoodN</string>

    <!-- Strings related to login -->
    <string name="prompt_sdt">Số điện thoại</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="error_invalid_sdt">Số điện thoại không hợp lệ</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_incorrect_password">Mật khẩu sai</string>
    <string name="error_field_required">Bắt buộc</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="prompt_fullname">Họ tên</string>
    <string name="prompt_retype">Nhập lại mật khẩu</string>
    <string name="prompt_dob">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="prompt_male">Nam</string>
    <string name="prompt_female">Nữ</string>
    <string name="input_notif">Vui lòng nhập thông tin của bạn.</string>
    <string name="confirm_notif">Nhập mã xác nhận trong tin nhắn của bạn.</string>
    <string name="msg_resend">Gửi lại tin nhắn.</string>
    <string name="confirm_finish">xác nhận</string>
    <string name="prompt_confirm">Mã xác nhận</string>
    <string name="home_label">FoodN</string>
    <string name="import_a">Import</string>
    <string name="detail_tab_info">Thông tin</string>
    <string name="detail_tab_menu">Menu</string>
    <string name="rate_call">Hãy đánh giá quán ăn này!</string>
    <string name="btn_edit">Chỉnh sửa</string>
    <string name="info_phone">Số điện thoại</string>
    <string name="info_name">Họ tên</string>
    <string name="info_pass">Mật khẩu</string>
    <string name="info_dob">Ngày sinh</string>
    <string name="info_gender">Giới tính</string>
    <string name="btn_finish">Cập nhật</string>
    <string name="suggested_radius">Bán kính gợi ý</string>
    <string name="view_mode">Chế độ xem</string>
    <string name="sug_rad_sug">5 km</string>
    <string name="view_mode_sug">Thường</string>
    <string name="leave">Bạn muốn thoát ứng dụng?</string>
    <string name="login_wrong">Tên tài khoản hoặc mật khẩu không đúng.</string>
    <string name="crnt_location">Vị trí hiện tại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Settings -->
</resources>
